--- a/views/hr_holidays_view.xml
+++ b/views/hr_holidays_view.xml
@@ -6,18 +6,18 @@
             <field name="model">hr.holidays</field>
             <field name="inherit_id" ref="hr_holidays.edit_holiday_new"/>
             <field name="arch" type="xml">
-	            <field name="date_from" nolabel="1" on_change="onchange_date_from(date_to, date_from)" required="1" class="oe_inline" position="replace">
-	                <field name="date_from" nolabel="1" on_change="onchange_date(date_to, date_from)" required="1" class="oe_inline"/>
-	            </field>
-	            <field name="date_to" nolabel="1" on_change="onchange_date_to(date_to, date_from)" required="1" class="oe_inline" position="replace">
-	                <field name="date_to" nolabel="1" on_change="onchange_date(date_to, date_from)" required="1" class="oe_inline"/>
-	            </field>
-	            <!-- <field name="name" attrs="{'readonly':[('state','!=','draft'),('state','!=','confirm')]}" position="replace">
-	                  <field name="name" attrs="{'readonly':[('state','!=','draft')]}"/>
-	              </field>
-	              <field name="department_id" attrs="{'readonly':[('holiday_type','=','category')]}" groups="base.group_hr_user" position="replace">
-	                  <field name="department_id" groups="base.group_hr_user"/>
-	              </field>-->
+                <field name="date_from" nolabel="1" on_change="onchange_date_from(date_to, date_from)" required="1" class="oe_inline" position="replace">
+                    <field name="date_from" nolabel="1" on_change="onchange_date(date_to, date_from)" attrs="{'required':[('type', '=', 'remove')]}" class="oe_inline"/>
+                </field>
+                <field name="date_to" nolabel="1" on_change="onchange_date_to(date_to, date_from)" required="1" class="oe_inline" position="replace">
+                    <field name="date_to" nolabel="1" on_change="onchange_date(date_to, date_from)"  attrs="{'required':[('type', '=', 'remove')]}" class="oe_inline"/>
+                </field>
+                <!-- <field name="name" attrs="{'readonly':[('state','!=','draft'),('state','!=','confirm')]}" position="replace">
+                      <field name="name" attrs="{'readonly':[('state','!=','draft')]}"/>
+                  </field>
+                  <field name="department_id" attrs="{'readonly':[('holiday_type','=','category')]}" groups="base.group_hr_user" position="replace">
+                      <field name="department_id" groups="base.group_hr_user"/>
+                  </field>-->
             </field>
         </record>
 
