--- a/wizard/holiday_year_wizard_view.xml
+++ b/wizard/holiday_year_wizard_view.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<openerp>
+<odoo>
     <data>
         <record model="ir.ui.view" id="holiday_year_wizard">
             <field name="name">training.holiday.year.wizard</field>
             <field name="model">training.holiday.year.wizard</field>
             <field name="type">form</field>
             <field name="arch" type="xml">
-                <form string="Generate Week-End">
-                    <group>
+                <form string="Generate Week-End" version="7.0">
+                    <group colspan="4">
                         <field name="year"/>
                     </group>
+                    <separator colspan="2"/>
                     <footer>
-                        <button string="Apply" name="action_apply" type="object"  class="btn-primary"/>
+                        <button name="action_apply" type="object" class="btn-primary" string="Apply"/>
                         <button string="Cancel" class="btn-default" special="cancel"/>
                     </footer>
                 </form>
@@ -30,6 +31,5 @@
         <menuitem id="holiday_year_wizard_mi"
             parent="holiday_mi"
             action="holiday_year_wizard_act" icon="STOCK_EXECUTE"/>
-
     </data>
-</openerp>
+</odoo>
